<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_detail">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title_movie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp"
                        tools:text="@string/movie_name" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_gravity="center"
                            android:layout_marginRight="5dp"
                            app:srcCompat="@drawable/ic_star_black" />

                        <TextView
                            android:id="@+id/rating_movie"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorText"
                            android:textSize="14sp"
                            tools:text="@string/movie_rating" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_gravity="center"
                            android:layout_marginRight="5dp"
                            app:srcCompat="@drawable/ic_group_black" />

                        <TextView
                            android:id="@+id/vote_movie"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorText"
                            android:textSize="14sp"
                            tools:text="@string/movie_vote" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_gravity="center"
                            android:layout_marginRight="5dp"
                            app:srcCompat="@drawable/ic_insert_invitation_black" />

                        <TextView
                            android:id="@+id/release_movie"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorText"
                            android:textSize="14sp"
                            tools:text="@string/movie_date" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_gravity="center"
                            android:layout_marginRight="5dp"
                            app:srcCompat="@drawable/ic_language_black" />

                        <TextView
                            android:id="@+id/language_movie"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorText"
                            android:textSize="14sp"
                            tools:text="@string/movie_language" />
                    </LinearLayout>
                </LinearLayout>

                <ImageView
                    android:id="@+id/img_favorit"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="right"
                    android:src="@drawable/ic_love_empty" />
            </LinearLayout>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginHorizontal="8dp"
                app:cardCornerRadius="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/movie_overview"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:alpha="0.2"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        android:id="@+id/overview_movie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/colorText"
                        android:textSize="14sp"
                        tools:text="@string/movie_overview" />

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>